tests/ui/borrowck/issue-24267-flow-exit.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/issue-24267-flow-exit.rs:12:20
   |
LL |     let x: i32;
   |         - binding declared here but left uninitialized
LL |     loop { x = break; }
LL |     println!("{}", x);
   |     ---------------^-
   |     |              |
   |     |              `x` used here but it isn't initialized
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
help: consider assigning a value
   |
LL |     let x: i32 = 0;
   |                +++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/issue-24267-flow-exit.rs:18:20
   |
LL |     let x: i32;
   |         - binding declared here but left uninitialized
LL |     for _ in 0..10 { x = continue; }
LL |     println!("{}", x);
   |     ---------------^-
   |     |              |
   |     |              `x` used here but it isn't initialized
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
help: consider assigning a value
   |
LL |     let x: i32 = 0;
   |                +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
